--- a/.github/workflows/test-vars.yml
+++ b/.github/workflows/test-vars.yml
@@ -24,6 +24,7 @@ jobs:
             "description"="Taggeo de VIN y Placa para todos los 102 documentos"
           } | ConvertTo-Json
           Write-Host $params.description
+          Write-Host Prueba Finalizada
         azPSVersion: "latest"
           
           
