--- a/.github/workflows/test-vars.yml
+++ b/.github/workflows/test-vars.yml
@@ -27,5 +27,14 @@ jobs:
           Write-Host $test.VISION_PREDICTION_ENDPOINT
           
         azPSVersion: "latest"
+
+    - name: Test Vars 2 Reusing
+      uses: azure/powershell@v2
+      with:
+        inlineScript: |
+          
+          Write-Host $test.COMPUTER_VISION_KEY
+          
+        azPSVersion: "latest"    
           
           
